# OpenGl-Triangle

./: .gitignore  CMakeLists.txt  OPENGLPROJECTConfig.h.in  README.md  main.cpp
